--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
 <body>
 
+    <h1>Team 02 Wireless Power Monitor</h1>
+
+    <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1498560/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"></iframe>
+
 </body>
 
 </html>
