Update iframes to update values to mV and mW

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="col-sm p-3">
                 <h3>Peak Voltage</h3>
-               <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1498560/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=20&title=Peak+Voltage+vs+Time&type=line&yaxismax=25&yaxismin=0"></iframe>
+                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1498560/charts/1?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=20&title=Peak+Voltage+vs+Time&type=line&yaxis=Peak+Voltage+%28mV%29&yaxismax=25000&yaxismin=0"></iframe>
             </div>
             <div class="col-sm p-3">
                 <h3>RMS Current</h3>
@@ -27,7 +27,7 @@
             </div>
             <div class="col-sm p-3">
                 <h3>Power</h3>
-               <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1498560/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=20&title=Power+vs+Time&type=line&yaxismin=0"></iframe>
+                <iframe width="450" height="260" style="border: 1px solid #cccccc;" src="https://thingspeak.com/channels/1498560/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=10&title=Power+vs+Time&type=line&yaxis=Power+%28mW%29&yaxismin=0"></iframe>
             </div>
         </div>
     </div>
